# auto-notes

auto-notes-main/: .gitignore  .tokeignore  README.md  index.html  justfile  package.json  pnpm-lock.yaml  tsconfig.json  typed-router.d.ts  vite.config.ts
auto-notes-main/AImodel/: .env  README.md  environment.yml  main_GLM.py  pyproject.toml  requirements.txt  requirements_conda.txt  requirements_pipreqs.txt  区块链输入.txt  区块链输出.json  区块链输出.md  区块链输出.txt  行列式输入.txt  行列式输出.json  行列式输出.md
auto-notes-main/api/: README.md  entities.py  exception_handler.py  main.py  models.py  myLogging.py  networkAPI_helper.py  noteAPI_helper.py  pyproject.toml  recordAPI_helper.py  uv_linux.sh  uv_macos.sh  uv_windows.ps1
auto-notes-main/api/functions/: export.py
auto-notes-main/api/typst/: main.typ
auto-notes-main/api/typst/flow/: .gitignore  CHANGELOG.md  MAINTAIN.md  README.md  typst.toml
auto-notes-main/api/typst/flow/.github/workflows/: compile-docs.yaml
auto-notes-main/api/typst/flow/doc/: manual.typ  workflow.typ
auto-notes-main/api/typst/flow/maintain/: common  install.sh  release.sh
auto-notes-main/api/typst/flow/src/: keywords.typ  lib.typ  palette.typ  template.typ  xlink.typ
auto-notes-main/api/typst/flow/src/util/: mod.typ
auto-notes-main/api/typst/flow/src/util/preset/: ana.typ  linalg.typ  mod.typ
auto-notes-main/api/typst/flow/template/: main.typ
auto-notes-main/api/typst/flow/thumbnail/: generate
auto-notes-main/api/typst/flow/util/: flow
auto-notes-main/src/: App.vue  apis.ts  index.css  (+3 more)
auto-notes-main/src-tauri/: Cargo.toml  tauri.conf.json
(+24 files in other folders)
