[project]
name = "api"
version = "0.1.0"
description = "Local server support for AutoNotes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "langchain>=0.3.18",
    "langchain-openai>=0.3.5",
    "openai-whisper>=20240930",
    "python-multipart>=0.0.20",
    "typst>=0.12.3",
    "llvmlite>=0.43.0",
    "numba>=0.60.0"
]
